added modules and all code

--- a/src/app/second/editinfo/editinfo.component.html
+++ b/src/app/second/editinfo/editinfo.component.html
@@ -1,3 +1,7 @@
 <p>
   editinfo works!
 </p>
+
+<input type="text" [(ngModel)]="editName" placeholder="Enter name">
+<br>
+<input type="text" [(ngModel)]="editSurname" placeholder="Enter surname">
